# ZeroDefect_AI_Industrial_Anomaly

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: app.py
artifacts/: README.md
configs/: base.toml
data/: README.md
docs/: ARCHITECTURE.md  BUILD_LOG.md  COLAB_READINESS.md  DATA_CONTRACT.md  DECISIONS.md  ROADMAP.md  SECURITY.md  TEST_REPORT.md
notebooks/: 00_colab_quickstart.ipynb  README.md
scripts/: validate_colab_notebook.py
src/zerodefect_ai/: __init__.py  __main__.py  artifacts.py  calibration.py  cli.py  config.py  datasets.py  domain.py  errors.py  image_io.py  metrics.py  service.py  synthetic.py  visualization.py  workflows.py
src/zerodefect_ai/detectors/: __init__.py  base.py  statistical.py
tests/: __init__.py  test_app.py  test_artifacts.py  test_calibration_metrics.py  test_config.py  test_detector.py  test_image_io.py  test_workflows.py
