[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerodefect-ai"
version = "0.1.0"
description = "Cold-start industrial visual anomaly detection with cost-aware calibration"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0,<3",
  "Pillow>=11.3,<13",
]

[project.optional-dependencies]
demo = ["gradio>=6,<7"]
patchcore = ["anomalib>=2,<3"]
dev = [
  "bandit>=1.8,<2",
  "mypy>=1.15,<2",
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.12,<1",
]

[project.scripts]
zerodefect = "zerodefect_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "S", "UP"]
ignore = [
  "S101", # assertions are appropriate in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["zerodefect_ai"]
